--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "npx prisma generate && next build",
-  "start": "next start",
-  "lint": "next lint",
-  "postinstall": "npx prisma generate",
-  "vercel-build": "npx prisma generate && next build"
-
+    "dev": "next dev --turbopack",
+    "build": "npx prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "npx prisma generate",
+    "vercel-build": "npx prisma generate && next build"
   },
   "packageManager": "npm@10.5.2",
   "overrides": {
@@ -19,18 +18,21 @@
     "next": "$next"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parser": "^3.2.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -44,6 +46,7 @@
     "@types/express": "^5.0.0",
     "@types/express-rate-limit": "^6.0.2",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
